iptables
# Generated by iptables-save v1.4.7 on Thu Apr  2 04:38:31 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [497:94527]
:RH-Firewall-1-INPUT - [0:0]
-A INPUT -j RH-Firewall-1-INPUT
-A INPUT -s 10.0.0.0/8 -i eth0 -j LOG --log-prefix "IP DROP SPOOF A: "
-A INPUT -s 172.16.0.0/12 -i eth0 -j LOG --log-prefix "IP DROP SPOOF B: "
-A INPUT -s 192.168.0.0/16 -i eth0 -j LOG --log-prefix "IP DROP SPOOF C: "
-A INPUT -s 224.0.0.0/4 -i eth0 -j LOG --log-prefix "IP DROP MULTICAST D: "
-A INPUT -s 240.0.0.0/5 -i eth0 -j LOG --log-prefix "IP DROP SPOOF E: "
-A INPUT -d 127.0.0.0/8 -i eth0 -j LOG --log-prefix "IP DROP LOOPBACK: "
#Syn Flood Limiter
-A INPUT -p tcp --syn -m limit --limit 5/s -j ACCEPT
#Forwarding to Redhat Firewall
-A FORWARD -j RH-Firewall-1-INPUT
#Allow Localhost
-A RH-Firewall-1-INPUT -i lo -j ACCEPT
#Allow ICMP
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
#Allow Different Connection States
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#Allow Our Ranges
-A RH-Firewall-1-INPUT  -s 182.176.221.32/27 -j ACCEPT
-A RH-Firewall-1-INPUT  -s 182.176.221.64/30 -j ACCEPT
-A RH-Firewall-1-INPUT  -s 182.176.220.33/27 -j ACCEPT
#Allow Ports
#Unknown Server - Check on JIN
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8181 -j ACCEPT
#Traccar Server
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 8082 -j ACCEPT
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 5001 -j ACCEPT
#SSH
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 2229 -j ACCEPT
#HTTPS
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
#HTTP
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
#Subsonic
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 4040 -j ACCEPT
#Transmission
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 9091 -j ACCEPT
#Blocking Bad Guys
-A RH-Firewall-1-INPUT -s 222.186.21.208 -j DROP
-A RH-Firewall-1-INPUT -s 134.255.214.161 -j DROP
-A RH-Firewall-1-INPUT -s 146.0.73.19 -j DROP
-A RH-Firewall-1-INPUT -s 159.8.194.196 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.157.70 -j DROP
-A RH-Firewall-1-INPUT -s 173.244.170.189 -j DROP
-A RH-Firewall-1-INPUT -s 177.184.197.91 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.201.166 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.206.36 -j DROP
-A RH-Firewall-1-INPUT -s 182.93.2.108 -j DROP
-A RH-Firewall-1-INPUT -s 187.217.233.9 -j DROP
-A RH-Firewall-1-INPUT -s 188.132.230.35 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.26.190 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.75.87 -j DROP
-A RH-Firewall-1-INPUT -s 189.208.232.162 -j DROP
-A RH-Firewall-1-INPUT -s 190.104.213.175 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.181.115 -j DROP
-A RH-Firewall-1-INPUT -s 199.168.98.186 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.112 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.119.231 -j DROP
-A RH-Firewall-1-INPUT -s 201.159.225.251 -j DROP
-A RH-Firewall-1-INPUT -s 201.77.236.15 -j DROP
-A RH-Firewall-1-INPUT -s 203.122.26.68 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.62 -j DROP
-A RH-Firewall-1-INPUT -s 208.3.140.43 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.78 -j DROP
-A RH-Firewall-1-INPUT -s 212.26.122.8 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.155.127 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.166.10 -j DROP
-A RH-Firewall-1-INPUT -s 213.151.175.143 -j DROP
-A RH-Firewall-1-INPUT -s 23.229.51.42 -j DROP
-A RH-Firewall-1-INPUT -s 23.94.149.226 -j DROP
-A RH-Firewall-1-INPUT -s 46.20.244.27 -j DROP
-A RH-Firewall-1-INPUT -s 47.21.197.250 -j DROP
-A RH-Firewall-1-INPUT -s 50.250.95.28 -j DROP
-A RH-Firewall-1-INPUT -s 5.10.124.117 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.65 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.127.148 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.246.122 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.89.78 -j DROP
-A RH-Firewall-1-INPUT -s 72.235.185.131 -j DROP
-A RH-Firewall-1-INPUT -s 77.245.77.240 -j DROP
-A RH-Firewall-1-INPUT -s 85.195.89.244 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.202 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.208 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.4 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.143 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.203 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.254 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.38 -j DROP
-A RH-Firewall-1-INPUT -s 87.252.228.248 -j DROP
-A RH-Firewall-1-INPUT -s 104.245.101.166 -j DROP
-A RH-Firewall-1-INPUT -s 107.150.51.44 -j DROP
-A RH-Firewall-1-INPUT -s 167.114.157.70 -j DROP
-A RH-Firewall-1-INPUT -s 178.162.201.166 -j DROP
-A RH-Firewall-1-INPUT -s 188.138.75.87 -j DROP
-A RH-Firewall-1-INPUT -s 188.161.247.174 -j DROP
-A RH-Firewall-1-INPUT -s 190.104.213.175 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.39.5 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.48.200 -j DROP
-A RH-Firewall-1-INPUT -s 195.154.58.164 -j DROP
-A RH-Firewall-1-INPUT -s 197.35.80.238 -j DROP
-A RH-Firewall-1-INPUT -s 198.20.69.98 -j DROP
-A RH-Firewall-1-INPUT -s 199.19.109.112 -j DROP
-A RH-Firewall-1-INPUT -s 199.217.119.231 -j DROP
-A RH-Firewall-1-INPUT -s 199.48.164.101 -j DROP
-A RH-Firewall-1-INPUT -s 201.159.225.251 -j DROP
-A RH-Firewall-1-INPUT -s 203.122.26.68 -j DROP
-A RH-Firewall-1-INPUT -s 204.124.182.62 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.76 -j DROP
-A RH-Firewall-1-INPUT -s 209.126.109.78 -j DROP
-A RH-Firewall-1-INPUT -s 212.26.122.8 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.140.45 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.148.64 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.155.127 -j DROP
-A RH-Firewall-1-INPUT -s 212.83.166.10 -j DROP
-A RH-Firewall-1-INPUT -s 23.239.65.170 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.53 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.76 -j DROP
-A RH-Firewall-1-INPUT -s 23.92.80.99 -j DROP
-A RH-Firewall-1-INPUT -s 37.8.42.153 -j DROP
-A RH-Firewall-1-INPUT -s 47.21.197.250 -j DROP
-A RH-Firewall-1-INPUT -s 5.10.124.117 -j DROP
-A RH-Firewall-1-INPUT -s 5.79.65.65 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.127.148 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.248.235 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.249.97 -j DROP
-A RH-Firewall-1-INPUT -s 62.210.251.48 -j DROP
-A RH-Firewall-1-INPUT -s 66.240.236.119 -j DROP
-A RH-Firewall-1-INPUT -s 69.197.155.26 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.230.90 -j DROP
-A RH-Firewall-1-INPUT -s 69.30.238.10 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.135.131 -j DROP
-A RH-Firewall-1-INPUT -s 71.6.165.200 -j DROP
-A RH-Firewall-1-INPUT -s 72.235.185.131 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.208 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.185.4 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.143 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.203 -j DROP
-A RH-Firewall-1-INPUT -s 85.25.214.38 -j DROP
-A RH-Firewall-1-INPUT -j LOG
-A RH-Firewall-1-INPUT -j DROP
COMMIT
# Completed on Thu Apr  2 04:38:31 2015
